# VeroctaAI

./: .gitignore  README.md  pyproject.toml  replit.md  setup_supabase_tables.py
verocta-ai-unified/: DEPLOYMENT.md  Dockerfile  Dockerfile.production  PRODUCTION_CHECKLIST.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.production.yml  docker-compose.yml  env.production.template  env.template  env.vercel.template  package-lock.json  package.json  render.yaml  requirements.txt  vercel.json
verocta-ai-unified/api/: docs.py  health.py  index.py  requirements.txt  spend-score.py  upload.py
verocta-ai-unified/backend/: API_DOCS.md  Dockerfile  FINAL_ENHANCEMENT_REPORT.md  LICENSE  README.md  README_new.md  app.py  auth.py  clone_verifier.py  create_logo.py  csv_parser.py  database.py  docker-compose.yml  gpt_utils.py  models.py  pdf_generator.py  pyproject.toml  requirements.txt  routes.py  setup_database.py  spend_score_engine.py  verify_database.py
verocta-ai-unified/backend/docs/: DEPLOYMENT.md  FINAL_ENHANCEMENT_REPORT.md
verocta-ai-unified/backend/prompts/: insight_prompt_v2.txt
verocta-ai-unified/backend/templates/: analysis.html  base.html  index.html
verocta-ai-unified/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
verocta-ai-unified/frontend/docs/: Fiverr Order Status (2).txt  Fiverr Order Status (3).txt  Fiverr Order Status FO2D6FAB5D42 (2).txt  Fiverr Order Status FO2D6FAB5D42 (3).txt  Fiverr Order Status FO2D6FAB5D42 (4).txt  Fiverr Order Status Footer.txt  Fiverr Pricing.txt  (+5 more)
(+31 files in other folders)
