[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.1",
    "flask==3.1.1",
    "gunicorn==23.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.26.0",
    "openai==1.98.0",
    "pandas==2.3.1",
    "pillow>=10.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv==1.0.1",
    "reportlab==4.4.3",
    "werkzeug==3.1.3",
    "flask-jwt-extended>=4.7.1",
    "bcrypt>=4.3.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.3.0",
    "supabase>=2.19.0",
    "sqlalchemy>=2.0.43",
]
